--- a/src/components/DateFilter/DateFilter.module.scss
+++ b/src/components/DateFilter/DateFilter.module.scss
@@ -177,22 +177,38 @@
 }
 
 .applyButton {
-  background: linear-gradient(135deg, $apply-button-start 0%, $apply-button-end 100%);
+  background: linear-gradient(
+    135deg,
+    $apply-button-start 0%,
+    $apply-button-end 100%
+  );
   color: $white-text;
   font-family: $font-family-primary;
 
   &:hover:not(:disabled) {
-    background: linear-gradient(135deg, $apply-button-hover-start 0%, $apply-button-hover-end 100%);
+    background: linear-gradient(
+      135deg,
+      $apply-button-hover-start 0%,
+      $apply-button-hover-end 100%
+    );
   }
 }
 
 .clearButton {
-  background: linear-gradient(135deg, $clear-button-start 0%, $clear-button-end 100%);
+  background: linear-gradient(
+    135deg,
+    $clear-button-start 0%,
+    $clear-button-end 100%
+  );
   color: $white-text;
   font-family: $font-family-primary;
 
   &:hover:not(:disabled) {
-    background: linear-gradient(135deg, $clear-button-hover-start 0%, $clear-button-hover-end 100%);
+    background: linear-gradient(
+      135deg,
+      $clear-button-hover-start 0%,
+      $clear-button-hover-end 100%
+    );
   }
 }
 
